my project change

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -163,7 +163,7 @@
   padding: 12px 39px;
   background-color: transparent;
   border: 3px solid #fcb72b;
-  transition: 0.2s;
+  transition: 0.  2s;
 }
 
 /* Responsive */
